#Change - Update Code

--- a/platform/ios/platform/macos/app/Base.lproj/MainMenu.xib
+++ b/platform/ios/platform/macos/app/Base.lproj/MainMenu.xib
@@ -26,11 +26,11 @@
         </customObject>
         <menu title="Main Menu" systemMenu="main" id="AYu-sK-qS6">
             <items>
-                <menuItem title="Mapbox GL" id="1Xt-HY-uBw">
+                <menuItem title="Trackasia GL" id="1Xt-HY-uBw">
                     <modifierMask key="keyEquivalentModifierMask"/>
-                    <menu key="submenu" title="Mapbox GL" systemMenu="apple" id="uQy-DD-JDr">
+                    <menu key="submenu" title="Trackasia GL" systemMenu="apple" id="uQy-DD-JDr">
                         <items>
-                            <menuItem title="About Mapbox GL" id="5kV-Vb-QxS">
+                            <menuItem title="About Trackasia GL" id="5kV-Vb-QxS">
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <connections>
                                     <action selector="orderFrontStandardAboutPanel:" target="-1" id="Exp-CZ-Vem"/>
@@ -48,7 +48,7 @@
                                 <menu key="submenu" title="Services" systemMenu="services" id="hz9-B4-Xy5"/>
                             </menuItem>
                             <menuItem isSeparatorItem="YES" id="4je-JR-u6R"/>
-                            <menuItem title="Hide Mapbox GL" keyEquivalent="h" id="Olw-nP-bQN">
+                            <menuItem title="Hide Trackasia GL" keyEquivalent="h" id="Olw-nP-bQN">
                                 <connections>
                                     <action selector="hide:" target="-1" id="PnN-Uc-m68"/>
                                 </connections>
@@ -66,7 +66,7 @@
                                 </connections>
                             </menuItem>
                             <menuItem isSeparatorItem="YES" id="kCx-OE-vgT"/>
-                            <menuItem title="Quit Mapbox GL" keyEquivalent="q" id="4sb-4s-VLi">
+                            <menuItem title="Quit Trackasia GL" keyEquivalent="q" id="4sb-4s-VLi">
                                 <connections>
                                     <action selector="terminate:" target="-1" id="Te7-pn-YzF"/>
                                 </connections>
@@ -662,7 +662,7 @@ CA
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <menu key="submenu" title="Help" systemMenu="help" id="F2S-fz-NVQ">
                         <items>
-                            <menuItem title="Mapbox GL Help" keyEquivalent="?" id="FKE-Sm-Kum">
+                            <menuItem title="Trackasia GL Help" keyEquivalent="?" id="FKE-Sm-Kum">
                                 <connections>
                                     <action selector="showShortcuts:" target="-1" id="hNZ-sm-X2q"/>
                                 </connections>
