--- a/platform/ios/platform/macos/app/Base.lproj/MapDocument.xib
+++ b/platform/ios/platform/macos/app/Base.lproj/MapDocument.xib
@@ -338,7 +338,7 @@
                     </textField>
                     <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="D3l-hX-2Dh">
                         <rect key="frame" x="98" y="132" width="276" height="42"/>
-                        <textFieldCell key="cell" selectable="YES" title="Mapbox GL will download all the resources needed for viewing the currently visible coordinate bounds in the current style." id="3Gw-Zy-sBT">
+                        <textFieldCell key="cell" selectable="YES" title="Trackasia GL will download all the resources needed for viewing the currently visible coordinate bounds in the current style." id="3Gw-Zy-sBT">
                             <font key="font" metaFont="smallSystem"/>
                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
